feat: Almost finished. Needs testing

--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -2,6 +2,7 @@
   "Bid Order": "Kauforder",
   "Purchased Products": "Gekaufte Artikel",
   "account": "Konto",
+  "account_added": "Konto erfolgreich hinzugefügt",
   "account_balance": "Guthaben",
   "account_created": "Ihr Konto wurde erstellt",
   "account_details": "Kontodetails",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Aktionen",
   "activate": "Aktivieren",
+  "activate_hint": "Bitte ordne die Wörter der Passphrase in der richtigen Reihenfolge an. Somit bestätigst Du, dass Du die Passphrase sicher verwahrst hast. Denke daran, dass Du ohne die Passphrase  keine Kontrolle über dein Konto hast.",
+  "activate_request_successful": "Aktivierung erfolgreich angefordert. Ihr Konto wird in wenigen Augenblicken aktiviert.",
   "activation_failed": "Aktivierung fehlgeschlagen:",
   "activation_success": "Aktivierung erfolgreich angefordert. Ihr Konto wird in wenigen Augenblicken aktiviert.",
   "add_answer": "Antwort hinzufügen",
@@ -156,6 +159,7 @@
   "click_to_claim": "Klicken Sie hier, um Ihre kostenlosen Burst zu erhalten.",
   "click_to_copy_passphrase": "Klicken Sie hier, um die Passphrase in die Zwischenablage zu kopieren",
   "click_to_refresh": "Klicken Sie, um zu aktualisieren",
+  "click_words": "Klicke die Wörter in der richtigen Reihenfolge an",
   "close": "Schließen",
   "comma": "Komma",
   "comment": "Kommentar",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Bitte bestätigen Sie, dass Sie diesen Artikel aus dem Angebot entfernen.",
   "confirm_order_cancellation": "Order-Stornierung bestätigen",
   "confirm_order_cancellation_help": "Wenn Sie sicher sind, dass Sie Ihre Order stornieren möchten, geben Sie Ihre Passphrase zur Bestätigung ein.",
+  "confirm_passphrase": "Passphrase bestätigen",
   "confirmations": "Bestätigungen",
   "confirmations_short": "Konf.",
   "confirmed": "Bestätigt",
@@ -952,6 +957,7 @@
   "transfer_asset": "Asset übertragen",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Übertragung wird ausgeführt.",
+  "try_again": "Erneut Versuchen",
   "type": "Typ",
   "unconfirmed_balance": "Unbestätigtes Guthaben",
   "unconfirmed_transaction": "Unbestätigte Transaktion",
