--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -2,6 +2,7 @@
   "Bid Order": "Εντολή προσφοράς",
   "Purchased Products": "Αγορασμένα αγαθά",
   "account": "Λογαριασμός",
+  "account_added": "Ο λογαριασμός προστέθηκε με επιτυχία",
   "account_balance": "Υπόλοιπο λογαριασμού",
   "account_created": "Ο λογαριασμός σας έχει δημιουργηθεί",
   "account_details": "Λεπτομέρειες λογαριασμού",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Ενέργειες",
   "activate": "Θέτω εις ενέργειαν",
+  "activate_hint": "Προσθέστε τις λέξεις της φράσης πρόσβασης με τη σωστή σειρά. Με αυτόν τον τρόπο, επιβεβαιώνετε ότι έχετε κρατήσει τη φράση πρόσβασης ασφαλής. Λάβετε υπόψη ότι δεν θα έχετε τη δυνατότητα να ελέγχετε το λογαριασμό σας χωρίς τη φράση πρόσβασης.",
+  "activate_request_successful": "Επιτυχής αιτούμενη ενεργοποίηση. Ο λογαριασμός σας θα ενεργοποιηθεί σε λίγα λεπτά.",
   "activation_failed": "Η ενεργοποίηση απέτυχε:",
   "activation_success": "Επιτυχής αιτούμενη ενεργοποίηση. Ο λογαριασμός σας θα ενεργοποιηθεί σε λίγα λεπτά.",
   "add_answer": "Προσθήκη απάντησης",
@@ -156,6 +159,7 @@
   "click_to_claim": "Κάντε κλικ εδώ για να διεκδικήσετε τη δωρεάν έκρηξη.",
   "click_to_copy_passphrase": "Κάντε κλικ εδώ για να αντιγράψετε τη φράση πρόσβασης στο πρόχειρο",
   "click_to_refresh": "Κάντε κλικ για ανανέωση",
+  "click_words": "Κάντε κλικ στις λέξεις με τη σωστή σειρά",
   "close": "Κλείσιμο",
   "comma": "Κόμμα",
   "comment": "Σχόλιο",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Παρακαλείστε να επιβεβαιώσετε αν θέλετε να διαγράψετε αυτό το στοιχείο.",
   "confirm_order_cancellation": "Επιβεβαίωση ακύρωσης παραγγελίας",
   "confirm_order_cancellation_help": "Εάν είστε βέβαιος ότι θέλετε να ακυρώσετε την παραγγελία σας, πληκτρολογήστε τη φράση πρόσβασης σας για να επιβεβαιώσετε.",
+  "confirm_passphrase": "Επιβεβαιώστε τη φράση πρόσβασης",
   "confirmations": "Επιβεβαιώσεις",
   "confirmations_short": "Conf.",
   "confirmed": "Επιβεβαιωμένο",
@@ -952,6 +957,7 @@
   "transfer_asset": "Μεταβίβαση μετοχής",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Μεταφορά σε εξέλιξη",
+  "try_again": "Προσπάθησε ξανά",
   "type": "Type",
   "unconfirmed_balance": "Unconfirmed Balance",
   "unconfirmed_transaction": "Ανεπιβεβαίωτη συναλλαγή",
