--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -2,6 +2,7 @@
   "Bid Order": "Orden de Compra",
   "Purchased Products": "Artículos Adquiridos",
   "account": "Cuenta",
+  "account_added": "Cuenta agregada exitosamente",
   "account_balance": "Saldo de la Cuenta",
   "account_created": "Tu cuenta ha sido creada",
   "account_details": "Detalles de Cuenta",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Acciones",
   "activate": "Activar",
+  "activate_hint": "Organice las palabras de la frase de contraseña en el orden correcto. Al hacerlo, confirma que ha mantenido segura la frase de contraseña. Tenga en cuenta que no podrá controlar su cuenta sin la frase de contraseña.",
+  "activate_request_successful": "Activación solicitada con éxito. Su cuenta se activará en unos momentos.",
   "activation_failed": "Activación fallida:",
   "activation_success": "Activación solicitada con éxito. Su cuenta se activará en unos momentos.",
   "add_answer": "Añadir respuesta",
@@ -156,6 +159,7 @@
   "click_to_claim": "Haga clic aquí para reclamar su ráfaga libre.",
   "click_to_copy_passphrase": "Haga clic aquí para copiar la frase de contraseña en el portapapeles",
   "click_to_refresh": "Haga clic para actualizar",
+  "click_words": "Haga clic en las palabras en el orden correcto.",
   "close": "Cerrar",
   "comma": "Coma",
   "comment": "Comentario",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Por favor, confirme si desea eliminar este artículo.",
   "confirm_order_cancellation": "Confirmar Cancelación de Orden",
   "confirm_order_cancellation_help": "Si está seguro de que quiere cancelar la orden, escriba su contraseña como confirmación.",
+  "confirm_passphrase": "Confirmar frase de contraseña",
   "confirmations": "Confirmaciones",
   "confirmations_short": "Conf.",
   "confirmed": "Confirmado",
@@ -952,6 +957,7 @@
   "transfer_asset": "Transferir Activo",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transferencia en Curso",
+  "try_again": "Inténtalo de nuevo",
   "type": "Tipo",
   "unconfirmed_balance": "Saldo Sin Confirmar",
   "unconfirmed_transaction": "Transacción Sin Confirmar",
