--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -2,6 +2,7 @@
   "Bid Order": "Ostotoimeksianto",
   "Purchased Products": "Ostetut tuotteet",
   "account": "Tili",
+  "account_added": "Tili lisätty onnistuneesti",
   "account_balance": "Tilin saldo",
   "account_created": "Sinun tilisi on luotu",
   "account_details": "Tilin tiedot",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Toiminnot",
   "activate": "Aktivoida",
+  "activate_hint": "Järjestä tunnuslause sanat oikeassa järjestyksessä. Näin vahvistat, että olet pitänyt salasanan turvassa. Muista, että et voi hallita tiliäsi ilman salasanaa.",
+  "activate_request_successful": "Pyydetty aktivointi onnistuneesti. Tilisi aktivoituu hetkessä.",
   "activation_failed": "Aktivointi epäonnistui:",
   "activation_success": "Pyydetty aktivointi onnistuneesti. Tilisi aktivoituu hetkessä.",
   "add_answer": "Lisää vastaus",
@@ -156,6 +159,7 @@
   "click_to_claim": "Klikkaa tästä väittääksesi vapaan purskeen.",
   "click_to_copy_passphrase": "Napsauttamalla tätä voit kopioida salasanan leikepöydälle",
   "click_to_refresh": "Päivitä napsauttamalla",
+  "click_words": "Napsauta sanoja oikeassa järjestyksessä",
   "close": "Sulje",
   "comma": "Pilkku",
   "comment": "Kommentti",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Vahvista tuotteen poisto.",
   "confirm_order_cancellation": "Vahvista toimeksiannon peruutus",
   "confirm_order_cancellation_help": "Vahvista toimeksiannon peruutus kirjoittamalla tunnuslauseesi.",
+  "confirm_passphrase": "Vahvista salasana",
   "confirmations": "Vahvistusta",
   "confirmations_short": "Vahvistuksia",
   "confirmed": "Vahvistettu",
@@ -952,6 +957,7 @@
   "transfer_asset": "Arvopaperin siirto",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Siirto käynnissä",
+  "try_again": "Yritä uudelleen",
   "type": "Tyyppi",
   "unconfirmed_balance": "Vahvistamaton saldo",
   "unconfirmed_transaction": "Vahvistamaton transaktio",
