--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -2,6 +2,7 @@
   "Bid Order": "Ordre d'achat",
   "Purchased Products": "Produits achetés",
   "account": "Compte",
+  "account_added": "Compte ajouté avec succès",
   "account_balance": "Solde du compte",
   "account_created": "Votre compte a été créé",
   "account_details": "Détails du compte",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Actions",
   "activate": "Activer",
+  "activate_hint": "Veuillez organiser les mots de la phrase secrète dans le bon ordre. Ce faisant, vous confirmez que vous avez conservé la phrase secrète en lieu sûr. Gardez à l'esprit que vous ne pourrez pas contrôler votre compte sans la phrase secrète.",
+  "activate_request_successful": "Activation demandée avec succès. Votre compte sera activé dans quelques instants.",
   "activation_failed": "Activation echouée:",
   "activation_success": "Activation demandée avec succès. Votre compte sera activé dans quelques instants.",
   "add_answer": "Ajouter une réponse",
@@ -156,6 +159,7 @@
   "click_to_claim": "Cliquez ici pour réclamer votre rafale gratuite.",
   "click_to_copy_passphrase": "Cliquez ici pour copier la phrase secrète dans le presse-papiers",
   "click_to_refresh": "Cliquez pour rafraîchir",
+  "click_words": "Cliquez sur les mots dans le bon ordre",
   "close": "Fermer",
   "comma": "Virgule",
   "comment": "Commentaire",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Veuillez confirmer la suppression de cet article.",
   "confirm_order_cancellation": "Confirmer l'annulation de la commande",
   "confirm_order_cancellation_help": "Si vous êtes sûr de vouloir annuler votre commande, tapez votre mot de passe pour confirmer.",
+  "confirm_passphrase": "Confirmer la phrase secrète",
   "confirmations": "Confirmations",
   "confirmations_short": "Conf.",
   "confirmed": "Confirmé",
@@ -952,6 +957,7 @@
   "transfer_asset": "Transférer l'actif",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transfert en cours",
+  "try_again": "Réessayer",
   "type": "Type",
   "unconfirmed_balance": "Solde non confirmé",
   "unconfirmed_transaction": "Transaction non confirmée",
