--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -2,6 +2,7 @@
   "Bid Order": "Orde de compra",
   "Purchased Products": "Artigos adquiridos",
   "account": "Conta",
+  "account_added": "Engadiuse a conta correctamente",
   "account_balance": "saldo da Conta",
   "account_created": "Creouse a túa conta",
   "account_details": "Detalles da conta",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Accións",
   "activate": "Activar",
+  "activate_hint": "Organiza as palabras da frase de paso na orde correcta. Ao facelo, confirma que mantivo a frase de paso segura. Teña presente que non poderás controlar a túa conta sen a frase de paso.",
+  "activate_request_successful": "Pediu a activación satisfactoria. A túa conta activarase nuns instantes",
   "activation_failed": "Fallou a activación:",
   "activation_success": "Pediu a activación satisfactoria. A túa conta activarase nuns instantes",
   "add_answer": "Engadir resposta",
@@ -156,6 +159,7 @@
   "click_to_claim": "Fai clic aquí para reclamar a explosión gratuíta.",
   "click_to_copy_passphrase": "Fai clic aquí para copiar o contrasinal no portapapeis",
   "click_to_refresh": "Fai clic para actualizar",
+  "click_words": "Faga clic nas palabras en orde correcta",
   "close": "Close",
   "comma": "Coma",
   "comment": "Comentario",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Por favor, confirme se desexa eliminar este artigo.",
   "confirm_order_cancellation": "Confirmar cancelación da orde",
   "confirm_order_cancellation_help": "Se está seguro de que quere cancelala orde, escriba o seu contrasinal como confirmación.",
+  "confirm_passphrase": "Confirma a frase de paso",
   "confirmations": "Confirmacións",
   "confirmations_short": "Conf.",
   "confirmed": "Confirmado",
@@ -952,6 +957,7 @@
   "transfer_asset": "Transferir activo",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transferencia en curso",
+  "try_again": "Intenta de novo",
   "type": "Tipo",
   "unconfirmed_balance": "Saldo sen confirmar",
   "unconfirmed_transaction": "Transacción sen confirmar",
