--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -2,6 +2,7 @@
   "Bid Order": "Nalog ponude",
   "Purchased Products": "Kupljeni proizvodi",
   "account": "Račun",
+  "account_added": "Račun je uspješno dodan",
   "account_balance": "Saldo računa",
   "account_created": "Vaš račun je napravljen",
   "account_details": "Detalji računa",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Akcije",
   "activate": "Aktivirati",
+  "activate_hint": "Rasporedite riječi zaporke u ispravnom redoslijedu. Samim tim potvrđujete da ste lozinku sačuvali na sigurnom. Imajte na umu da nećete moći kontrolirati svoj račun bez zaporke.",
+  "activate_request_successful": "Aktiviranje je uspješno. Vaš će račun biti aktiviran za nekoliko trenutaka.",
   "activation_failed": "Aktivacija nije uspjela:",
   "activation_success": "Aktiviranje je uspješno. Vaš će račun biti aktiviran za nekoliko trenutaka.",
   "add_answer": "Dodaj odgovor",
@@ -156,6 +159,7 @@
   "click_to_claim": "Kliknite ovdje da biste zatražili vaš besplatni Burst.",
   "click_to_copy_passphrase": "Kliknite ovdje da biste kopirali zaporku u međuspremnik",
   "click_to_refresh": "Kliknite za osvježavanje",
+  "click_words": "Kliknite riječi ispravnim redoslijedom",
   "close": "Zatvori",
   "comma": "Zarez",
   "comment": "Komentar",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Molimo potvrdite ukoliko želite obrisati ovaj artikl.",
   "confirm_order_cancellation": "Potvrdite otkazivanje naloga",
   "confirm_order_cancellation_help": "Ako ste sigurni da želite otkazati narudžbu, unesite vašu lozinku za potvrdu.",
+  "confirm_passphrase": "Potvrdite zaporku",
   "confirmations": "Potvrde",
   "confirmations_short": "Conf.",
   "confirmed": "Potvrđeno",
@@ -952,6 +957,7 @@
   "transfer_asset": "Premjestite asset",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transfer u tijeku",
+  "try_again": "Pokušajte ponovo",
   "type": "Tip",
   "unconfirmed_balance": "Nepotvrđeni saldo",
   "unconfirmed_transaction": "Nepotvrđena transakcija",
