--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -2,6 +2,7 @@
   "Bid Order": "注文順",
   "Purchased Products": "購入商品",
   "account": "アカウント",
+  "account_added": "アカウントが正常に追加されました",
   "account_balance": "アカウントの残高",
   "account_created": "あなたのアカウントが作成されました",
   "account_details": "アカウントの詳細",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "アクション",
   "activate": "アクティベート",
+  "activate_hint": "パスフレーズの単語を正しい順序で並べてください。そうすることにより、パスフレーズを安全に保持したことを確認します。パスフレーズなしではアカウントを制御できないことに注意してください。",
+  "activate_request_successful": "アクティベーションを正常に要求しました。アカウントはすぐに有効になります。",
   "activation_failed": "アクティベーションに失敗しました：",
   "activation_success": "アクティベーションを正常に要求しました。アカウントはすぐに有効になります。",
   "add_answer": "回答を追加",
@@ -156,6 +159,7 @@
   "click_to_claim": "あなたの無料バーストを請求するにはここをクリックしてください。",
   "click_to_copy_passphrase": "パスフレーズをクリップボードにコピーするには、ここをクリックしてください。",
   "click_to_refresh": "クリックして更新",
+  "click_words": "正しい順序で単語をクリックします",
   "close": "閉じる",
   "comma": "コンマ",
   "comment": "コメント",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "この項目を削除したいかどうかはご確認ください。",
   "confirm_order_cancellation": "注文のキャンセルを確認",
   "confirm_order_cancellation_help": "注文をキャンセルする場合は、確認のためにパスフレーズを入力してください。",
+  "confirm_passphrase": "パスフレーズを確認する",
   "confirmations": "確認",
   "confirmations_short": "確認",
   "confirmed": "確認済み",
@@ -952,6 +957,7 @@
   "transfer_asset": "資産を転送",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "転送中",
+  "try_again": "再試行する",
   "type": "タイプ",
   "unconfirmed_balance": "未確認の残高",
   "unconfirmed_transaction": "未確認のトランザクション",
