--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -2,6 +2,7 @@
   "Bid Order": "Kainos pasiūlymo užsakymas",
   "Purchased Products": "Nupirkti produktai",
   "account": "Sąskaita",
+  "account_added": "Paskyra pridėta sėkmingai",
   "account_balance": "Sąskaitos balansas",
   "account_created": "Jūsų paskyra sukurta",
   "account_details": "Paskyros Duomenys",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Veiksmai",
   "activate": "Suaktyvinti",
+  "activate_hint": "Prašome frazės žodžius išdėstyti teisinga tvarka. Tai darydami patvirtinate, kad saugote slaptafrazę. Atminkite, kad negalėsite valdyti savo sąskaitos be slaptafrazės.",
+  "activate_request_successful": "Sėkmingai paprašyta suaktyvinti. Jūsų sąskaita bus suaktyvinta po kelių akimirkų.",
   "activation_failed": "Aktyvinimas nepavyko:",
   "activation_success": "Sėkmingai paprašyta suaktyvinti. Jūsų sąskaita bus suaktyvinta po kelių akimirkų.",
   "add_answer": "Pridėti atsakymą",
@@ -156,6 +159,7 @@
   "click_to_claim": "Spauskite čia norėdami pareikšti savo reikalavimą.",
   "click_to_copy_passphrase": "Spustelėkite čia, jei norite kopijuoti slaptą frazę į iškarpinę",
   "click_to_refresh": "Spustelėkite, jei norite atnaujinti",
+  "click_words": "Spustelėkite žodžius teisinga tvarka",
   "close": "Uždaryti",
   "comma": "Kablelis",
   "comment": "Komentuoti",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Prašome patvirtinti, jei norite panaikinti šį elementą.",
   "confirm_order_cancellation": "Patvirtinti užsakymo atšaukimą",
   "confirm_order_cancellation_help": "Jei esate tikri, kad norite atšaukti užsakymą, patvirtinkite įvesdami savo slaptažodį.",
+  "confirm_passphrase": "Patvirtinkite slaptafrazę",
   "confirmations": "Patvirtinimai",
   "confirmations_short": "Patvirtinimai",
   "confirmed": "Patvirtintas",
@@ -952,6 +957,7 @@
   "transfer_asset": "Perkelti aktyvą",
   "transfer_history": "Perkelti istoriją",
   "transfer_in_progress": "Pervedimas vyksta",
+  "try_again": "Bandyk iš naujo",
   "type": "Tipas",
   "unconfirmed_balance": "Nepatvirtintas balansas",
   "unconfirmed_transaction": "Nepatvirtinta transakcija",
