--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -2,6 +2,7 @@
   "Bid Order": "Nalog ponude",
   "Purchased Products": "Kupljeni proizvodi",
   "account": "Račun",
+  "account_added": "",
   "account_balance": "Saldo računa",
   "account_created": "Vaš račun je napravljen",
   "account_details": "Detalji računa",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Akcije",
   "activate": "",
+  "activate_hint": "",
+  "activate_request_successful": "",
   "activation_failed": "",
   "activation_success": "",
   "add_answer": "Dodaj odgovor",
@@ -156,6 +159,7 @@
   "click_to_claim": "Kliknite ovdje da biste zatražili vaš besplatni Burst.",
   "click_to_copy_passphrase": "Kliknite ovde da kopirate lozinku u klipbord",
   "click_to_refresh": "Kliknite da biste osvežili",
+  "click_words": "",
   "close": "Zatvori",
   "comma": "",
   "comment": "Komentar",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Molimo potvrdite ukoliko želite obrisati ovaj artikl.",
   "confirm_order_cancellation": "Potvrdite otkazivanje naloga",
   "confirm_order_cancellation_help": "Ako ste sigurni da želite otkazati narudžbu, unesite vašu lozinku za potvrdu.",
+  "confirm_passphrase": "",
   "confirmations": "Potvrde",
   "confirmations_short": "Conf.",
   "confirmed": "Potvrđeno",
@@ -952,6 +957,7 @@
   "transfer_asset": "Premjestite asset",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transfer u tijeku",
+  "try_again": "",
   "type": "Tip",
   "unconfirmed_balance": "Nepotvrđeni saldo",
   "unconfirmed_transaction": "Nepotvrđena transakcija",
