--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -2,6 +2,7 @@
   "Bid Order": "Nalog Ponude",
   "Purchased Products": "Kupljeni Proizvodi",
   "account": "Nalog",
+  "account_added": "Налог је успешно додат",
   "account_balance": "Saldo Naloga",
   "account_created": "Ваш налог је направљен",
   "account_details": "Detalji naloga",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Akcije",
   "activate": "Активирати",
+  "activate_hint": "Молимо да распоредите речи лозинке у тачном редоследу. Самим тим потврђујете да сте чували лозинку. Имајте на уму да нећете моћи да контролишете свој рачун без запорке.",
+  "activate_request_successful": "Активирање је успешно. Ваш рачун ће се активирати за неколико тренутака.",
   "activation_failed": "Активација није успела:",
   "activation_success": "Активирање је успешно. Ваш рачун ће се активирати за неколико тренутака.",
   "add_answer": "Dodaj Odgovor",
@@ -141,6 +144,7 @@
   "clear_search_results": "Obrišite Rezultate Pretrage",
   "click_here_to_enable": "Kliknite ovde da ga omogućite.",
   "click_to_claim": "Click here to claim your free Burst.",
+  "click_words": "Кликните речи исправним редоследом",
   "close": "Zatvori",
   "comma": "Зарез",
   "comment": "Komentariši",
@@ -152,6 +156,7 @@
   "confirm_marketplace_deletion_help": "Molimo potvrdite ukoliko želite izbrisati ovu stavku.",
   "confirm_order_cancellation": "Potvrdite Otkazivanje Porudžbine",
   "confirm_order_cancellation_help": "Ako ste sigurni da želite otkazati porudžbinu, unesite vašu lozinku za potvrdu.",
+  "confirm_passphrase": "Потврдите лозинку",
   "confirmations": "Konfirmacije",
   "confirmations_short": "Conf.",
   "confirmed": "Potvrđeno",
@@ -886,6 +891,7 @@
   "transfer_asset": "Premestite Asset",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transfer je u toku",
+  "try_again": "Покушајте поново",
   "type": "Tip",
   "unconfirmed_balance": "Nepotvrđeni Saldo",
   "unconfirmed_transaction": "Nepotvrđena Transakcija",
