--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -2,6 +2,7 @@
   "Bid Order": "Налог Понуде",
   "Purchased Products": "Купљени Производи",
   "account": "Налог",
+  "account_added": "Налог је успешно додат",
   "account_balance": "Салдо Налога",
   "account_created": "Ваш налог је направљен",
   "account_details": "Детаљи налога",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Акције",
   "activate": "Активирати",
+  "activate_hint": "Молимо да распоредите речи лозинке у тачном редоследу. Самим тим потврђујете да сте чували лозинку. Имајте на уму да нећете моћи да контролишете свој рачун без запорке.",
+  "activate_request_successful": "Активирање је успешно. Ваш рачун ће се активирати за неколико тренутака.",
   "activation_failed": "Активација није успела:",
   "activation_success": "Активирање је успешно. Ваш рачун ће се активирати за неколико тренутака.",
   "add_answer": "Додај Одговор",
@@ -156,6 +159,7 @@
   "click_to_claim": "Кликните овде да бисте затражили ваш бесплатни Бурст.",
   "click_to_copy_passphrase": "Кликните овде да бисте копирали фразу у клипборд",
   "click_to_refresh": "Кликните да бисте освежили",
+  "click_words": "Кликните речи исправним редоследом",
   "close": "Затвори",
   "comma": "Зарез",
   "comment": "Коментар",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Молимо потврдите уколико желите избрисати ову ставку.",
   "confirm_order_cancellation": "Потврдите Отказивање Поруџбине",
   "confirm_order_cancellation_help": "Ако сте сигурни да желите отказати поруџбину, унесите вашу лозинку за потврду.",
+  "confirm_passphrase": "Потврдите лозинку",
   "confirmations": "Конфирмације",
   "confirmations_short": "Conf.",
   "confirmed": "Потврђено",
@@ -952,6 +957,7 @@
   "transfer_asset": "Преместите Асcет",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Трансфер је у току",
+  "try_again": "Покушајте поново",
   "type": "Тип",
   "unconfirmed_balance": "Непотврђен Салдо",
   "unconfirmed_transaction": "Непотврђена Трансакција",
