--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -2,6 +2,7 @@
   "Bid Order": "Bid Order",
   "Purchased Products": "Satın alınan ürünler",
   "account": "Hesap",
+  "account_added": "Hesap başarıyla eklendi",
   "account_balance": "Hesap bakiyesi",
   "account_created": "Hesabınız oluşturuldu",
   "account_details": "Hesap Bilgileri",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "işlemler",
   "activate": "etkinleştirme",
+  "activate_hint": "Lütfen parola sözcüklerini doğru sırayla düzenleyin. Bunu yaparak, parolayı güvende tuttuğunuzu onaylarsınız. Hesabınızı parola olmadan kontrol edemeyeceğinizi unutmayın.",
+  "activate_request_successful": "Başarıyla aktivasyon istendi. Hesabınız birkaç dakika içinde aktif hale gelecektir.",
   "activation_failed": "Aktivasyon başarısız oldu:",
   "activation_success": "Başarıyla aktivasyon istendi. Hesabınız birkaç dakika içinde aktif hale gelecektir.",
   "add_answer": "Cevap Ekle",
@@ -156,6 +159,7 @@
   "click_to_claim": "Ücretsiz Çekiminizi talep etmek için buraya tıklayın.",
   "click_to_copy_passphrase": "Parolayı panoya kopyalamak için buraya tıklayın",
   "click_to_refresh": "Yenilemek için tıklayın",
+  "click_words": "Doğru sırayla kelimeleri tıklayın",
   "close": "Kapat",
   "comma": "Virgül",
   "comment": "Yorum Yap",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Lütfen bu öğeyi silmek istediğinizi onaylayın.",
   "confirm_order_cancellation": "Sipariş iptalini Onayla",
   "confirm_order_cancellation_help": "Siparişinizi iptal etmek istediğinizden eminseniz, parolanızı girin.",
+  "confirm_passphrase": "Parolayı onayla",
   "confirmations": "Onaylar",
   "confirmations_short": "Conf.",
   "confirmed": "Confirmed",
@@ -952,6 +957,7 @@
   "transfer_asset": "Varlık tranfer et",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transfer devam ediyor",
+  "try_again": "Tekrar deneyin",
   "type": "Type",
   "unconfirmed_balance": "Unconfirmed Balance",
   "unconfirmed_transaction": "Onaylanmamış işlemler",
