--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -2,6 +2,7 @@
   "Bid Order": "Ордер на продаж",
   "Purchased Products": "Куплені Товари",
   "account": "Аккаунт",
+  "account_added": "Обліковий запис успішно додано",
   "account_balance": "Залишок на рахунку",
   "account_created": "Ваш обліковий запис створено",
   "account_details": "Подробиці аккаунта",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Дії",
   "activate": "Активуйте",
+  "activate_hint": "Будь ласка, розташуйте слова проходу у правильному порядку. Тим самим ти підтверджуєш, що зберігаєш парольну фразу. Майте на увазі, що ви не зможете контролювати свій рахунок без парольної фрази.",
+  "activate_request_successful": "Активація просила успішно. Ваш рахунок буде активовано через кілька моментів.",
   "activation_failed": "Помилка активації:",
   "activation_success": "Активація просила успішно. Ваш рахунок буде активовано через кілька моментів.",
   "add_answer": "Додати відповідь",
@@ -156,6 +159,7 @@
   "click_to_claim": "Натисніть тут, щоб одержати безкоштовний Burst.",
   "click_to_copy_passphrase": "Натисніть тут, щоб скопіювати фразу в буфер обміну",
   "click_to_refresh": "Натисніть, щоб оновити",
+  "click_words": "Клацніть слова у правильному порядку",
   "close": "Закрити",
   "comma": "Кома",
   "comment": "Коментар",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Будь ласка, підтвердіть, якщо ви хочете видалити цей елемент.",
   "confirm_order_cancellation": "Підтвердьте скасування замовлення",
   "confirm_order_cancellation_help": "Якщо ви дійсно бажаєте скасувати замовлення, введіть ваш парольну фразу для підтвердження.",
+  "confirm_passphrase": "Підтвердьте парольну фразу",
   "confirmations": "Підтверджень",
   "confirmations_short": "Конф.",
   "confirmed": "Підтверджено",
@@ -952,6 +957,7 @@
   "transfer_asset": "Передача активів",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Передача в процесі",
+  "try_again": "Спробуйте ще раз",
   "type": "Тип",
   "unconfirmed_balance": "Непідтвердженій баланс",
   "unconfirmed_transaction": "Непідтверджена Транзакція",
