--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -2,6 +2,7 @@
   "Bid Order": "买单",
   "Purchased Products": "已购买产品",
   "account": "帐户",
+  "account_added": "帐户已成功添加",
   "account_balance": "帐户余额",
   "account_created": "您的帐号已经建立",
   "account_details": "帐户详细信息",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "操作",
   "activate": "启用",
+  "activate_hint": "请按正确的顺序排列密码短语的单词。这样，您可以确认密码安全。请记住，没有密码短语将无法控制您的帐户。",
+  "activate_request_successful": "成功请求激活。您的帐户将在几分钟后被激活。",
   "activation_failed": "激活失败：",
   "activation_success": "成功请求激活。您的帐户将在几分钟后被激活。",
   "add_answer": "添加答案",
@@ -156,6 +159,7 @@
   "click_to_claim": "点击此处声明您的免费Burst。",
   "click_to_copy_passphrase": "单击此处将密码复制到剪贴板",
   "click_to_refresh": "点击刷新",
+  "click_words": "单击正确顺序的单词",
   "close": "关闭",
   "comma": "逗号",
   "comment": "评论",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "请确认以删除该商品。",
   "confirm_order_cancellation": "确认取消订单",
   "confirm_order_cancellation_help": "如果您确定要取消订单，请输入密码确认。",
+  "confirm_passphrase": "确认密码",
   "confirmations": "确认",
   "confirmations_short": "确认",
   "confirmed": "已确认",
@@ -952,6 +957,7 @@
   "transfer_asset": "转移资产",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "转移正在处理",
+  "try_again": "再试一次",
   "type": "类型",
   "unconfirmed_balance": "未确认的余额",
   "unconfirmed_transaction": "未确认的交易",
