--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -2,6 +2,7 @@
   "Bid Order": "買單",
   "Purchased Products": "已購買產品",
   "account": "帳戶",
+  "account_added": "帐户已成功添加",
   "account_balance": "帳戶餘額",
   "account_created": "您的帐号已经建立",
   "account_details": "帳戶詳細信息",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "操作",
   "activate": "启用",
+  "activate_hint": "请按正确的顺序排列密码短语的单词。这样，您可以确认密码安全。请记住，没有密码短语将无法控制您的帐户。",
+  "activate_request_successful": "成功请求激活。您的帐户将在几分钟后被激活。",
   "activation_failed": "激活失败：",
   "activation_success": "成功请求激活。您的帐户将在几分钟后被激活。",
   "add_answer": "添加答案",
@@ -156,6 +159,7 @@
   "click_to_claim": "点击此处声明您的免费Burst。",
   "click_to_copy_passphrase": "单击此处将密码复制到剪贴板",
   "click_to_refresh": "点击刷新",
+  "click_words": "单击正确顺序的单词",
   "close": "關閉​​​",
   "comma": "逗号",
   "comment": "评论",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "請按確認以刪除商品。",
   "confirm_order_cancellation": "確認取消訂單",
   "confirm_order_cancellation_help": "如果你確定要取消訂單，請輸入密碼確認。",
+  "confirm_passphrase": "确认密码",
   "confirmations": "確認",
   "confirmations_short": "確認",
   "confirmed": "已確認",
@@ -952,6 +957,7 @@
   "transfer_asset": "轉移資產",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "轉移正在處理",
+  "try_again": "再试一次",
   "type": "類型",
   "unconfirmed_balance": "未確認的餘額",
   "unconfirmed_transaction": "未確認的交易",
