--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -2,6 +2,7 @@
   "Bid Order": "Bod Bestelling",
   "Purchased Products": "Gekochte Producten",
   "account": "Account",
+  "account_added": "Account succesvol toegevoegd",
   "account_balance": "Rekening saldo",
   "account_created": "Je account is aangemaakt",
   "account_details": "Accountgegevens",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Acties",
   "activate": "Activeren",
+  "activate_hint": "Plaats de woorden van de wachtwoordzin in de juiste volgorde. Hiermee bevestigt u dat u de wachtwoordzin veilig hebt bewaard. Houd er rekening mee dat u uw account niet kunt beheren zonder de wachtwoordzin.",
+  "activate_request_successful": "Succesvolle activering aangevraagd. Uw account wordt over enkele ogenblikken geactiveerd.",
   "activation_failed": "Activatie mislukt:",
   "activation_success": "Succesvolle activering aangevraagd. Uw account wordt over enkele ogenblikken geactiveerd.",
   "add_answer": "Antwoord toevoegen",
@@ -156,6 +159,7 @@
   "click_to_claim": "Klik hier om uw gratis Burst te claimen.",
   "click_to_copy_passphrase": "Klik hier om de wachtwoordzin naar het klembord te kopiëren",
   "click_to_refresh": "Klik om te vernieuwen",
+  "click_words": "Klik op woorden in de juiste volgorde",
   "close": "Sluiten",
   "comma": "Komma",
   "comment": "Commentaar",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Graag bevestigen dat u dit artikel wilt verwijderen.",
   "confirm_order_cancellation": "Bevestig annulering van de bestelling",
   "confirm_order_cancellation_help": "Wilt u uw bestelling annuleren? Typ dan uw wachtwoord in om dit te bevestigen.",
+  "confirm_passphrase": "Bevestig de wachtwoordzin",
   "confirmations": "Bevestigingen",
   "confirmations_short": "Conf.",
   "confirmed": "Bevestigd",
@@ -952,6 +957,7 @@
   "transfer_asset": "Asset overdragen",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Overdracht in uitvoering",
+  "try_again": "Probeer opnieuw",
   "type": "Type",
   "unconfirmed_balance": "Onbevestigde Balans",
   "unconfirmed_transaction": "Onbevestigde Transactie",
