--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -2,6 +2,7 @@
   "Bid Order": "Ordem de Compra",
   "Purchased Products": "Artigos Adquiridos",
   "account": "Conta",
+  "account_added": "Conta adicionada com sucesso",
   "account_balance": "Saldo da Conta",
   "account_created": "Sua conta foi criada",
   "account_details": "Detalhes de Conta",
@@ -13,6 +14,8 @@
   "accounts": "Accounts",
   "actions": "Ações",
   "activate": "Ativar",
+  "activate_hint": "Organize as palavras da senha na ordem correta. Ao fazer isso, você confirma que manteve a senha segura. Lembre-se de que você não poderá controlar sua conta sem a senha.",
+  "activate_request_successful": "Ativação solicitada com sucesso. Sua conta será ativada em alguns instantes.",
   "activation_failed": "Ativação falhou:",
   "activation_success": "Ativação solicitada com sucesso. Sua conta será ativada em alguns instantes.",
   "add_answer": "Adicionar resposta",
@@ -156,6 +159,7 @@
   "click_to_claim": "Clique aqui para ganhar seu Burst grátis.",
   "click_to_copy_passphrase": "Clique aqui para copiar a frase secreta na área de transferência",
   "click_to_refresh": "Clique para atualizar",
+  "click_words": "Clique nas palavras na ordem correta",
   "close": "Fechar",
   "comma": "Vírgula",
   "comment": "Comente",
@@ -167,6 +171,7 @@
   "confirm_marketplace_deletion_help": "Por favor, confirme se deseja excluir este artigo.",
   "confirm_order_cancellation": "Confirmar o Cancelamento da Ordem",
   "confirm_order_cancellation_help": "Se você está certo de que quer cancelar a ordem, digite a sua senha como confirmação.",
+  "confirm_passphrase": "Confirmar senha",
   "confirmations": "Confirmações",
   "confirmations_short": "Conf.",
   "confirmed": "Confirmado",
@@ -952,6 +957,7 @@
   "transfer_asset": "Transferir o Ativo",
   "transfer_history": "Transfer History",
   "transfer_in_progress": "Transferência em Andamento",
+  "try_again": "Tente novamente",
   "type": "Tipo",
   "unconfirmed_balance": "Saldo não Confirmado",
   "unconfirmed_transaction": "Transação Não Confirmada",
